cluster/apps_legacy/smokeping/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smokeping
  labels:
    app: smokeping
  name: smokeping
  annotations:
spec:
  rules:
  - host: smoke.${SECRET_DOMAIN_INTERNAL}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smokeping
            port:
              number: 80
